Closed Bug 1060977 Opened 11 years ago Closed 11 years ago

Fix more bad implicit constructors in xpconnect

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8481991 - Flags: review?(bugs)
Comment on attachment 8481991 [details] [diff] [review] Fix more bad implicit constructors in xpconnect MOZ_CONSTEXPR explicit FilteringWrapper(unsigned flags) : Base(flags) {} is getting rather ugly :/
Attachment #8481991 - Flags: review?(bugs) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: