Bug 1060977 - Fix more bad implicit constructors in xpconnect; r=smaug