js/xpconnect/wrappers/FilteringWrapper.h
@@ -23,7 +23,7 @@ namespace xpc {
 template <typename Base, typename Policy>
 class FilteringWrapper : public Base {
   public:
-    MOZ_CONSTEXPR FilteringWrapper(unsigned flags) : Base(flags) {}
+    MOZ_CONSTEXPR explicit FilteringWrapper(unsigned flags) : Base(flags) {}
 
     virtual bool getPropertyDescriptor(JSContext *cx, JS::Handle<JSObject*> wrapper,
                                        JS::Handle<jsid> id,
@@ -58,7 +58,7 @@ class FilteringWrapper : public Base {
  */
 class CrossOriginXrayWrapper : public SecurityXrayDOM {
   public:
-    CrossOriginXrayWrapper(unsigned flags);
+    explicit CrossOriginXrayWrapper(unsigned flags);
 
     virtual bool getPropertyDescriptor(JSContext *cx, JS::Handle<JSObject*> wrapper,
                                        JS::Handle<jsid> id,
